@@ -884,8 +884,7 @@ class TestContactsSource(SolrIntegrationTestCase):
                .having(firstname=u'Lara', lastname=u'Croft',
                        email=u'lara.croft@example.com'))
         create(Builder('contact')
-               .having(firstname=u'Super', lastname=u'M\xe4n',
-                       email='superman@example.com'))
+               .having(firstname=u'Super', lastname=u'M\xe4n'))
 
         self.commit_solr()
         self.source = ContactsSource(self.portal)
@@ -901,10 +900,10 @@ class TestContactsSource(SolrIntegrationTestCase):
         self.assertNotIn('contact:not-existing', self.source)
 
     def test_get_term_by_token(self):
-        term = self.source.getTermByToken('contact:man-super')
-        self.assertEquals('contact:man-super', term.token)
-        self.assertEquals('contact:man-super', term.value)
-        self.assertEquals(u'M\xe4n Super (superman@example.com)', term.title)
+        term = self.source.getTermByToken('contact:croft-lara')
+        self.assertEquals('contact:croft-lara', term.token)
+        self.assertEquals('contact:croft-lara', term.value)
+        self.assertEquals(u'Croft Lara (lara.croft@example.com)', term.title)
 
     def test_search_contacts(self):
         self.login(self.administrator)
@@ -915,6 +914,16 @@ class TestContactsSource(SolrIntegrationTestCase):
         self.assertEquals('contact:croft-lara', result[0].token)
         self.assertEquals('contact:croft-lara', result[0].value)
         self.assertEquals('Croft Lara (lara.croft@example.com)', result[0].title)
+
+    def test_search_contact_without_email(self):
+        self.login(self.administrator)
+        result = self.source.search("super")
+
+        self.assertEqual(1, len(result))
+        term = result.pop()
+        self.assertEqual('contact:man-super', term.value)
+        self.assertEqual('contact:man-super', term.token)
+        self.assertEqual(u'M\xe4n Super', term.title)
 
     def test_search_ogds_users_is_empty(self):
         self.assertEquals([], self.source.search('Hugo'))
